Beginning with the final fixes:
All the screens are linked. Also the file that was lost (the recipe page that luka made) is
back. Arrow back buttons are also linked, except for the arrow back button on the recipe
guide page. What's left to be done is fixing the weird not happening click event on that
arrow back button that is not working, and add some transition between the pages, and if
there is time we should clean up our script.js file because there is too much of the same
code. Let's try that tomorrow.

--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1,7 +1,15 @@
 /* This targets the h4 header and the two
 orange boxes. */
+.home__top-container {
+    display: flex;
+    flex-flow: column nowrap;
+    font-size: 40px;
+    margin-top: 50px;
+    margin-left: 10px;
+    padding: 0px;
+}
 .home__container {
-    display: none;
+    display: flex;
     flex-flow: column;
     justify-content: space-around;
     padding: 24px;
