--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -55,7 +55,7 @@ h4 {
     font-weight: 800;
     color: var(--black);
     font-size: 24px;
-    padding: 50px 0px 15px 0px;
+    /* padding: 50px 0px 15px 0px; */
 }
 
 p {
@@ -66,7 +66,7 @@ p {
 
 /* back button should be the same for all of the pages*/
 .back-button {
-    /* margin-top: 50px;
-    margin-left: 10px; */
     font-size: 30px;
+    cursor: pointer;
+    color: var(--black);
 }
